updated baseurl on config.yml plus templates with site.url

--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   The NGS Academy for the Africa CDC's Africa Pathogen Genomics Initiative is coordinated by the University of Cape Town's Computational Biology Division (CBIO) in collaboration with Africa CDC and ACEGID. 
   The NGS Academy draws on the expertise of H3ABioNet, a pan African bioinformatics network, which runs an extensive training and outreach program and which is led by CBIO.
 
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "/ngs-academy" # the subpath of your site, e.g. /blog
 url: "https://uct-cbio.github.io/ngs-academy/" # the base hostname & protocol for your site, e.g. http://example.com
 
 
