--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   command = "bundle exec jekyll build"
-  publish = "ngs-academy"
+  publish = "/"
 
 [build.environment]
   JEKYLL_ENV = "production"
